--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -4,7 +4,7 @@ parameters:
     database_port: null
     database_name: InvoiceSales
     database_user: root
-    database_password: rootpassword
+    database_password: #your root mysql password
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: null
