Removed unneccesary stuff and refactored some code

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # https://git-scm.com/docs/gitignore
 # https://help.github.com/articles/ignoring-files
 # Example .gitignore files: https://github.com/github/gitignore
+/.idea/
 /bower_components/
 /node_modules/
 /vendor/
 /app/cache/
 /app/logs/
+/web/bundles/
 
